syntax = "proto3";

/* The main data entity served by the gRPC service
 * Contains the block key and the block value as a serialized value */
message DataItem {
  string key = 1;
  string value = 2;
}

/* Configuration entity containing serialized info about connection to the respective chain */
message RuntimeConfig {
  string serialized_config = 1;
}

/* getRuntimeName
 * Request returning the name of the runtime 
* returns the runtime name as a string */

message GetRuntimeNameRequest {}

message GetRuntimeNameResponse {
  string name = 1;
}

/* getRuntimeName
 * Request returning the version of the runtime 
 * returns the runtime version as a string */
message GetRuntimeVersionRequest {}

message GetRuntimeVersionResponse {
  string version = 1;
}

/* validateSetConfig
 * Request validating a configuration string to connect to the respective chain
 * returns a validated serialized configuration object */
message ValidateSetConfigRequest {
  string raw_config = 1;
}

message ValidateSetConfigResponse {
  string serialized_config = 1;
}

/* getDataItem
 * Request retrieving and returning a block from the respective chain 
 * Returns the requested block as a dataItem */
message GetDataItemRequest {
  RuntimeConfig config = 1;
  string key = 2;
}

message GetDataItemResponse {
  DataItem data_item = 1;
}

/* prevalidateDataItem
 * Request pre-validating a dataItem that is about to be validated 
 * returns the pre-validation result as a boolean */
message PrevalidateDataItemRequest {
  RuntimeConfig config = 1;
  DataItem data_item = 2;
}

message PrevalidateDataItemResponse {
  bool valid = 1;
}

/* transformDataItem
 * Request transforming the given data item into a preferred format
 * returns the transformed dataItem */
message TransformDataItemRequest {
  RuntimeConfig config = 1;
  DataItem data_item = 2;
}

message TransformDataItemResponse {
  DataItem transformed_data_item = 1;
}


/* validateDataItem
 * Request validating a dataItem 
 * returns the validation result as a boolean */
message ValidateDataItemRequest {
  RuntimeConfig config = 1;
  DataItem proposed_data_item = 2;
  DataItem validation_data_item = 3;
}

message ValidateDataItemResponse {
  bool valid = 1;
}

/* summarizeDataBundle
 * Request summarizing a dataBundle 
 * returns the bundle summary as a string */
message SummarizeDataBundleRequest {
  RuntimeConfig config = 1;
  repeated DataItem bundle = 2;
}

message SummarizeDataBundleResponse {
  string summary = 1;
}

/* nextKey
 * Request retrieving the next key on the chain 
 * returns the key as a string */
message NextKeyRequest {
  RuntimeConfig config = 1;
  string key = 2;
}

message NextKeyResponse {
  string next_key = 1;
}

service Runtime {
  rpc GetRuntimeName(GetRuntimeNameRequest) returns (GetRuntimeNameResponse);
  rpc GetRuntimeVersion(GetRuntimeVersionRequest) returns (GetRuntimeVersionResponse);
  rpc ValidateSetConfig (ValidateSetConfigRequest) returns (ValidateSetConfigResponse);
  rpc GetDataItem (GetDataItemRequest) returns (GetDataItemResponse);
  rpc PrevalidateDataItem (PrevalidateDataItemRequest) returns (PrevalidateDataItemResponse);
  rpc TransformDataItem (TransformDataItemRequest) returns (TransformDataItemResponse);
  rpc ValidateDataItem (ValidateDataItemRequest) returns (ValidateDataItemResponse);
  rpc SummarizeDataBundle (SummarizeDataBundleRequest) returns (SummarizeDataBundleResponse);
  rpc NextKey (NextKeyRequest) returns (NextKeyResponse);
}
